[Framework] Improving TextRedactor to try to retain element width [Framework] TextRedactor now also redacts <img> elements